--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -2,6 +2,34 @@
     width: 14%;
     padding: 16px;
 
+    .link-logo{
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        text-decoration: none;
+        border: none;
+
+        .logo{
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            overflow: hidden;
+    
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        span{
+            font-weight: 700;
+            color: #040558;
+            text-align: left;
+        }
+    
+    }
+
     .sub-menu-container{
         display: flex;
         flex-direction: column;
