--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -13,6 +13,7 @@
             display: flex;
             flex-flow: column;
             gap: 16px;
+            margin-top: -5px;
 
             .left{
                 width: 100%;
