--- a/src/components/table/Table.scss
+++ b/src/components/table/Table.scss
@@ -1,6 +1,7 @@
 .table-container{
     width: 100%;
     margin-top: 16px;
+    border-collapse: collapse;
 
     .table-row{
         text-align: left;
