commit fourth app update

--- a/src/components/announcements/Announcements.scss
+++ b/src/components/announcements/Announcements.scss
@@ -31,7 +31,8 @@
         .item{
             padding: 16px;
             border-radius: 10px;
-            background-color: #dfd9d9;
+            background-color: #F7F8FA;
+            // background-color: #dfd9d9;
 
             .intro{
                 display: flex;
