--- a/src/components/bigCalendar/BigCalendar.scss
+++ b/src/components/bigCalendar/BigCalendar.scss
@@ -11,7 +11,7 @@
             transition: all 0.3s ease-in-out;
 
             &:hover{
-                background-color: gray;
+                background-color: #F7F8FA;
             }
         }
     }
@@ -25,7 +25,7 @@
 
             .row-data{
                 border: 1px solid #e5e7eb;
-                background-color: #f8fafc;
+                background-color: #F7F8FA;
                 
                 // &:nth-child(even){
                 //     background-color: #f8fafc;
