--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -4,8 +4,9 @@
 
     .right{
         width: 86%;
-        overflow: scroll;
-        display: flex;flex-flow: column;
+        // overflow: scroll;
+        display: flex;
+        flex-flow: column;
         background-color: #F7F8FA;
 
         .admin{
