--- a/src/pages/attendance/Attendance.scss
+++ b/src/pages/attendance/Attendance.scss
@@ -28,6 +28,47 @@
                 }
 
                 .up{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 16px;
+                    width: 100%;
+
+                    .actions{
+                        display: flex;
+                        align-items: center;
+                        gap: 16px;
+                        // align-self: flex-end;
+
+                        button{
+                            width: 32px;
+                            height: 32px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            background-color: orange;
+                            border-radius: 50%;
+                            outline: none;
+                            border: 2px solid orange;
+                            cursor: pointer;
+
+                            .icon{
+                                width: 16px;
+                                height: 16px;
+                                color: white;
+                            }
+                        }
+
+                        .switch-container{
+                            display: flex;
+                            flex-direction: column;
+                            gap: 5px;
+                            .swicth{
+                                width: 120px;
+                                border-radius: 20px;
+                            }    
+                        }
+                    }
 
                 }
 
@@ -41,6 +82,183 @@
                 display: none;
             }
 
+            .row-data{
+                border: 1px solid #e5e7eb;
+                border-left: none;
+                border-right: none;
+
+                &:nth-child(even){
+                    background-color: #f8fafc;
+                }
+
+                .teacher-date{
+                    padding: 16px;
+                    display: flex;
+                    flex-direction: column;
+                    // 
+                    padding-left: 6px;
+
+                    h3{
+                        font-size: 14px;
+                        font-weight: 600;
+                    }
+
+                    p{
+                        font-size: 12px;
+                        color: black;
+                        opacity: 0.7;
+                    }
+
+                }
+
+                .student-class{
+                    padding: 16px;
+                    display: flex;
+                    flex-direction: column;
+                    padding-left: 6px;
+
+                    h3{
+                        font-size: 14px;
+                        font-weight: 600;
+                    }
+
+                    p{
+                        font-size: 12px;
+                        color: black;
+                        opacity: 0.7;
+                    }
+
+                }
+
+                .teacher-time{
+                    padding: 16px;
+                    display: flex ;
+                    flex-direction: column;
+                    padding-left: 0px;
+
+                    span{
+                        font-size: 14px;
+
+                    }
+
+                }
+
+                .inner-data{
+                    display: none;
+                }
+            }
+
         }
     }
+}
+
+
+@media screen and (min-width: 768px){
+    .list-attendance-container{
+    
+        .right{
+            width: 92%;
+
+            .list-attendance{
+                
+                .sub-container{
+    
+                    h1{
+                        display: block;
+                    }
+
+                    .up{
+                        width: auto;
+                        flex-direction: row;
+                    }
+                }
+
+                // .table-data{
+                //     display: table-cell;
+                // }
+
+                // .row-data{
+    
+                //     .inner-data{
+                //         display: table-cell;
+                //     }
+    
+                // }
+    
+    
+            }
+        }
+    }
+    
+}
+
+@media screen and (min-width: 900px){
+    .list-attendance-container{
+    
+        .right{
+            width: 92%;
+
+            .list-attendance{
+                
+                .sub-container{
+    
+                    h1{
+                        display: block;
+                    }
+
+                    .up{
+                        width: auto;
+                        // flex-direction: row;
+                    }
+                }
+
+                .table-data{
+                    display: table-cell;
+                }
+
+                .row-data{
+    
+                    .inner-data{
+                        display: table-cell;
+                    }
+
+                    .teacher-time{
+                        display: flex;
+                    }
+    
+                }
+    
+    
+            }
+        }
+    }
+    
+}
+
+@media screen and (min-width: 1024px){
+    .list-attendance-container{
+    
+        .right{
+            width: 84%;
+
+            .list-attendance{
+
+                .table-data-second{
+                    display: table-cell;
+                }
+
+            }
+        }
+    }
+    
+}
+
+@media screen and (min-width: 1280px){
+    .list-attendance-container{
+    
+        .right{
+            width: 86%;
+        }
+    }
+    
 }
