--- a/src/pages/teachers/Teachers.scss
+++ b/src/pages/teachers/Teachers.scss
@@ -56,6 +56,7 @@
                             .icon{
                                 width: 16px;
                                 height: 16px;
+                                color: white;
                             }
                         }
                     }
