--- a/src/pages/announcementsList/AnnouncementsList.scss
+++ b/src/pages/announcementsList/AnnouncementsList.scss
@@ -107,6 +107,7 @@
 
                         span{
                             font-size: 12px;
+                            opacity: 0.7;
                         }
     
                     }
