--- a/src/pages/assignments/Assignments.scss
+++ b/src/pages/assignments/Assignments.scss
@@ -24,10 +24,41 @@
                 h1{
                     font-size: 18px;
                     font-weight: 600;
-                    // display: none;
+                    display: none;
                 }
 
                 .up{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 16px;
+                    width: 100%;
+
+                    .actions{
+                        display: flex;
+                        align-items: center;
+                        gap: 16px;
+                        // align-self: flex-end;
+
+                        button{
+                            width: 32px;
+                            height: 32px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            background-color: orange;
+                            border-radius: 50%;
+                            outline: none;
+                            border: 2px solid orange;
+                            cursor: pointer;
+
+                            .icon{
+                                width: 16px;
+                                height: 16px;
+                                color: white;
+                            }
+                        }
+                    }
 
                 }
 
@@ -95,7 +126,7 @@
 
                     .up{
                         width: auto;
-                        // flex-direction: row;
+                        flex-direction: row;
                     }
                 }
 
