--- a/src/pages/attendance/Attendance.scss
+++ b/src/pages/attendance/Attendance.scss
@@ -96,7 +96,7 @@
                     display: flex;
                     flex-direction: column;
                     // 
-                    padding-left: 6px;
+                    // padding-left: 6px;
 
                     h3{
                         font-size: 14px;
@@ -115,7 +115,7 @@
                     padding: 16px;
                     display: flex;
                     flex-direction: column;
-                    padding-left: 6px;
+                    // padding-left: 6px;
 
                     h3{
                         font-size: 14px;
