--- a/src/pages/exams/Exams.scss
+++ b/src/pages/exams/Exams.scss
@@ -28,6 +28,37 @@
                 }
 
                 .up{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 16px;
+                    width: 100%;
+
+                    .actions{
+                        display: flex;
+                        align-items: center;
+                        gap: 16px;
+                        // align-self: flex-end;
+
+                        button{
+                            width: 32px;
+                            height: 32px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            background-color: orange;
+                            border-radius: 50%;
+                            outline: none;
+                            border: 2px solid orange;
+                            cursor: pointer;
+
+                            .icon{
+                                width: 16px;
+                                height: 16px;
+                                color: white;
+                            }
+                        }
+                    }
 
                 }
 
@@ -55,7 +86,7 @@
                     display: flex;
                     flex-direction: column;
                     // 
-                    padding-left: 6px;
+                    // padding-left: 7px;
 
                     h3{
                         font-size: 14px;
@@ -71,7 +102,7 @@
                 }
 
                 .term-class{
-                    padding: 16px;
+                    // padding: 16px;
                     display: flex;
                     flex-direction: column;
 
@@ -84,10 +115,6 @@
                         font-size: 12px;
                         color: black;
                         opacity: 0.7;
-                        // 
-                        // background-color: orange;
-                        // padding: 4px;
-                        // border-radius: 50%;
                     }
 
                 }
@@ -117,7 +144,7 @@
 
                     .up{
                         width: auto;
-                        // flex-direction: row;
+                        flex-direction: row;
                     }
                 }
 
