--- a/src/pages/subjects/Subjects.scss
+++ b/src/pages/subjects/Subjects.scss
@@ -55,6 +55,7 @@
                             .icon{
                                 width: 16px;
                                 height: 16px;
+                                color: white;
                             }
                         }
                     }
