--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -51,6 +51,18 @@
                 text-decoration: none;
                 border-radius: 6px;
 
+                &.active{
+                    background-color: #040558;
+
+                    .menu-icon{
+                        color: white;
+                    }
+
+                    .link-label{
+                        color: white;
+                    }
+                }
+
                 .link-label{
                     font-size: 16px;
                     color: #6a7282;
