--- a/src/pages/singleStudent/SingleStudent.scss
+++ b/src/pages/singleStudent/SingleStudent.scss
@@ -1,4 +1,4 @@
-.single-teacher-container{
+.single-student-container{
     min-height: 100vh;
     display: flex;
 
@@ -9,7 +9,7 @@
         flex-flow: column;
         background-color: #F7F8FA;
 
-        .single-teacher{
+        .single-student{
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -101,7 +101,7 @@
                             border-radius: 6px;
                             display: flex;
                             flex-direction: column;
-                            gap: 10px;
+                            // gap: 16px;
                             width: 100%;
 
                             &:nth-child(1){
@@ -138,8 +138,8 @@
                                 justify-content: space-between;
 
                                 .icon{
-                                    width: 15px;
-                                    height: 15px;
+                                    width: 20px;
+                                    height: 20px;
                                     color: white;
                                 }
                             }
@@ -170,34 +170,6 @@
                         font-size: 18px;
                         font-weight: 600;
                     }
-
-                    .our-calendar{
-                        position: absolute;
-                        z-index: 100;
-                        top: -250px;
-                        left: 50%;
-                        transform: translateX(-50%);
-
-                        .react-calendar{
-                            border: none;
-                            place-self: center;
-
-                            .react-calendar__navigation__label{
-
-                                span{
-                                    font-weight: 600;
-                                    font-size: 17px;
-                            
-                                }
-                            }
-                            
-                            .react-calendar__navigation button{
-                                font-size: 20px;
-                                border-radius: 50%;
-                            }
-                    
-                        }
-                    }
                 }
             }
 
@@ -211,10 +183,11 @@
                     background-color: white;
                     padding: 17px;
                     border-radius: 6px;
-                    min-height: 249px;
-                    
+                    // min-height: 201px;
+                    min-height: 225px;
+
                     .scroll-table{
-                        height: 190px;
+                        height: 152px;
                         overflow: scroll;
                     }
 
@@ -279,14 +252,15 @@
         }
         
     }
+
 }
 
 
 @media screen and (max-width: 400px){
-    .single-teacher-container{
+    .single-student-container{
 
         .right{
-            .single-teacher{
+            .single-student{
                 .left{
                     .top{
                         .user-info-card{
@@ -307,11 +281,11 @@
 }
 
 @media screen and (min-width: 768px){
-    .single-teacher-container{
+    .single-student-container{
 
         .right{
 
-            .single-teacher{
+            .single-student{
 
                 .left{
         
@@ -346,11 +320,11 @@
 }
 
 @media screen and (min-width: 1024px){
-    .single-teacher-container{
+    .single-student-container{
 
         .right{
 
-            .single-teacher{
+            .single-student{
 
                 .left{
         
@@ -380,11 +354,11 @@
 }
 
 @media screen and (min-width: 1280px){
-    .single-teacher-container{
+    .single-student-container{
 
         .right{
 
-            .single-teacher{
+            .single-student{
                 flex-direction: row;
 
                 .left{
@@ -413,11 +387,11 @@
 }
 
 @media screen and (min-width: 1536px){
-    .single-teacher-container{
+    .single-student-container{
 
         .right{
 
-            .single-teacher{
+            .single-student{
 
                 .left{
         
