--- a/src/pages/profile/Profile.scss
+++ b/src/pages/profile/Profile.scss
@@ -14,11 +14,15 @@
             padding: 16px;
             gap: 16px;
             margin-top: 55px;
+            // 
+            flex-direction: column;
 
             .left{
-                width: calc(100% * 2/3);
+                // width: calc(100% * 2/3);
+                width: calc(100%);
+                // 
                 background-color: white;
-                height: 650px;
+                min-height: 650px;
                 border-radius: 10px;
                 padding: 16px;
                 position: relative;
@@ -62,9 +66,9 @@
                             input{
                                 padding: 8px 15px;
                                 outline: none;
-                                border: none;
-                                background-color: #F7F8FA;
-                                border-radius: 8px;
+                                border: 1px solid #cccccc;
+                                background-color: white;
+                                border-radius: 4px;
                             }
 
                             &.flex{
@@ -81,14 +85,160 @@
                             }
                         }
                     }
+
+                    .button-container{
+                        text-align: center;
+                        margin-top: 20px;
+
+                        button{
+                            padding: 10px;
+                            outline: none;
+                            background-color: orange;
+                            color: white;
+                            width: 50%;
+                            border: 2px solid orange;
+                            border-radius: 8px;
+                            font-size: 18px;
+                            transition: all 0.3s ease-in-out;
+                            font-weight: 600;
+                            cursor: pointer;
+
+                            &:hover{
+                                background-color: white;
+                                color: orange;
+                                letter-spacing: 1.3px;
+                            }
+                        }
+                    }
     
                 }
             }
 
             .right{
-                width: calc(100% * 1/3);  
+                // width: calc(100% * 1/3);  
+                width: calc(100%); 
+                //  
+                background-color: white;
+                padding: 16px;
+                border-radius: 10px;
+                height: fit-content;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                .card{
+                    background-color: #040558;
+                    padding: 16px;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 10px;
+                    border-radius: 10px;
+                    .icons{
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+
+                        .icon{
+                            color: white;
+                            width: 20px;
+                            height: 20px;
+                        }
+                    }
+
+                    &:nth-child(1),&:nth-child(3){
+                        h1{
+                            color: orange;
+                        }
+                    }
+
+                    &:nth-child(2){
+                        background-color: orange;
+                        // margin: 10px 0;
+
+                        h1{
+                            color: #040558;
+                        }
+                    }
+                    span{
+                        color: white;
+                        opacity: 0.7;
+                    }
+                }
             }
         }
 
     }
 }
+
+
+
+@media screen and (max-width: 625px){
+    .profile-container{
+
+        .right{
+
+            .profile{
+
+                .left{
+                    .form-profile{
+
+                        .info{
+
+                            .row.flex{
+                                flex-direction: column;
+                            }
+                        }
+                    }
+                }
+                
+            }
+
+        }
+    }
+}
+
+@media screen and (min-width: 768px){
+    .profile-container{
+
+        .right{
+
+            .profile{
+                flex-direction: column;
+
+                .left{
+                    width: 100%;
+                }
+                
+                .right{
+                    width: 100%;
+                }
+            }
+
+        }
+    }
+    
+}
+
+
+@media screen and (min-width: 900px){
+    .profile-container{
+
+        .right{
+
+            .profile{
+                flex-direction: row;
+
+                .left{
+                    width: calc(100% * 2/3);
+                }
+
+                .right{
+                    width: calc(100% * 1/3);
+                }
+            }
+        
+        }
+    }
+    
+}
+
