Commit eleventh App update

--- a/src/pages/attendance/Attendance.scss
+++ b/src/pages/attendance/Attendance.scss
@@ -148,6 +148,19 @@
                 }
             }
 
+            .count-row{
+
+                tbody{
+    
+                    tr{
+                        &:nth-child(1){
+                            border-top-color: transparent;
+                        }
+                    }
+                }
+            }
+    
+
         }
     }
 }
