--- a/src/pages/assignments/Assignments.scss
+++ b/src/pages/assignments/Assignments.scss
@@ -88,7 +88,7 @@
 
                     h3{
                         font-size: 14px;
-                        font-weight: 600;
+                        font-weight: 800;
                     }
 
                     p{
@@ -105,6 +105,19 @@
             }
 
         }
+
+        .count-row{
+
+            tbody{
+
+                tr{
+                    &:nth-child(1){
+                        border-top-color: transparent;
+                    }
+                }
+            }
+        }
+
     }
 
 }
