--- a/src/pages/classes/Classes.scss
+++ b/src/pages/classes/Classes.scss
@@ -105,6 +105,19 @@
 
 
         }
+
+        .count-row{
+
+            tbody{
+
+                tr{
+                    &:nth-child(1){
+                        border-top-color: transparent;
+                    }
+                }
+            }
+        }
+
     }
 }
 
