--- a/src/pages/parents/Parents.scss
+++ b/src/pages/parents/Parents.scss
@@ -115,6 +115,19 @@
             }
 
         }
+
+        .count-row{
+
+            tbody{
+
+                tr{
+                    &:nth-child(1){
+                        border-top-color: transparent;
+                    }
+                }
+            }
+        }
+
     }
 }
 
