--- a/src/pages/settings/Settings.scss
+++ b/src/pages/settings/Settings.scss
@@ -294,8 +294,109 @@
                 }
 
             }
+
+            span{
+                font-size: 15px;
+            }
+
+            h4{
+                opacity: 0.5;
+            }
         }
 
     }
 
+}
+
+
+@media screen and (max-width: 768px){
+    .settings-container{
+
+        .right{
+
+            .settings{
+
+                .general{
+
+                    .bottom{
+                        // flex-direction: column;
+
+                        .column{
+                            
+                            .language-container{
+                                flex-direction: column;
+                            }
+
+                            .year-container{
+                                flex-flow: column;
+                                .row{
+
+                                    .label{
+                                        min-width: 35px;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+
+                .school-info{
+
+                    .bottom{
+                        flex-flow: column;
+                        gap: 12px;
+
+                        .first{
+                            width: 100%;
+                            gap: 10px;
+
+                            .inputs-container{
+                                width: calc(100% - 85px);
+                            }
+                        }
+
+                        .second, .third{
+                            width: 100%;
+                        }
+
+
+                    }
+                }
+
+                // .users-roles{
+
+                //     .bottom{
+                //         flex-direction: column;
+                //     }
+                // }
+            }
+        
+        }
+    }
+    
+}
+
+@media screen and (max-width: 530px){
+    .settings-container{
+
+        .right{
+
+            .settings{
+
+                .users-roles{
+
+                    .bottom{
+                        flex-direction: column;
+                        gap: 20px;
+
+                        .column{
+                            width: 100%;
+                        }
+                    }
+                }
+            }
+        
+        }
+    }
+    
 }
