--- a/src/pages/subjects/Subjects.scss
+++ b/src/pages/subjects/Subjects.scss
@@ -104,6 +104,19 @@
             }
 
         }
+
+        .count-row{
+
+            tbody{
+
+                tr{
+                    &:nth-child(1){
+                        border-top-color: transparent;
+                    }
+                }
+            }
+        }
+
     }
 }
 
