Commit twelveth App update

--- a/src/pages/announcementsList/AnnouncementsList.scss
+++ b/src/pages/announcementsList/AnnouncementsList.scss
@@ -135,6 +135,19 @@
                 }
             }
 
+            .count-row{
+
+                tbody{
+    
+                    tr{
+                        &:nth-child(1){
+                            border-top-color: transparent;
+                        }
+                    }
+                }
+            }
+
+
         }
     }
 
